feat(select): added select component

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" href="<%= process.env.PUBLIC_PATH %>favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <meta name="theme-color" content="#000000" />
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--
         Notice the use of <%= process.env.PUBLIC_PATH %> in the tags above.
         It will be replaced with the URL of the `public` folder during the build.
